# ClassEase-Pitch

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.local-test.yml  docker-compose.test.yml  docker-compose.yml  plan.md  request.py  requirements.txt
app/backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  backend_pre_start.py  config.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup_mysql_dev.sql  tests_pre_start.py  utils.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 06299fedaf34_create_table.py  39de98d12662_added_membership_and_permissions_for_.py  59549f020704_create_tables.py  6c1b8c9f0a21_enable_rls_on_tenant_tables.py  8a3919813bad_create_tables.py
app/backend/api/: __init__.py
app/backend/api/v1/: __init__.py  app.py
app/backend/api/v1/routers/: dependencies.py  schema.py
app/backend/api/v1/schemas/: admin_schema.py  assessment_schema.py  base_schema.py  config_schema.py  custom_schema.py  event_schema.py  schemas.py  stud_year_record_schema.py  student_schema.py  teacher_schema.py  user_schema.py  year_schema.py
app/backend/api/v1/services/: admin_service.py  base_user_service.py  event_service.py  semester_service.py  student_promotion.py  student_registration.py  student_service.py  user_service.py
app/backend/api/v1/utils/: parameter.py  test_parameter.py  typing.py
app/backend/api/v1/views/: __init__.py  admin.py  auth.py  errors.py  methods.py  shared_access.py  students.py  teachers.py  utils.py
app/backend/core/: config.py  db.py  security.py
app/backend/extension/enums/: enum.py
app/backend/extension/functions/: helper.py
app/backend/extension/pydant/models/: mark_list_schema.py
app/backend/extension/pydantic/: schema.py
app/backend/extension/pydantic/hal_link/: hal_utils.py  link_schema.py
app/backend/extension/pydantic/models/: __init__.py  academic_term_schema.py  admin_schema.py  assessment_schema.py  blacklist_token_schema.py  event_schema.py  grade_schema.py  grade_stream_link_schema.py  grade_stream_subject_schema.py  mark_list_schema.py  registration_schema.py  saved_query_view_schema.py  section_schema.py  stream_schema.py  student_schema.py  student_term_record_schema.py  student_year_record_schema.py  subject_schema.py  subject_yearly_average_schema.py  table_schema.py  teacher_grade_link_schema.py  teacher_record_schema.py  teacher_schema.py  teacher_subject_link_schema.py  teacher_term_record_schema.py  user_schema.py  year_schema.py  yearly_subject_schema.py
app/backend/extension/pydantic/response/: schema.py
app/backend/models/: __init__.py  academic_term.py  admin.py  assessment.py  average_result.py  average_subject.py  base_model.py  blacklist_token.py  ceo.py  employee.py  employee_year_link.py  event.py  grade.py  grade_section_link.py  grade_stream_link.py  grade_stream_subject.py  mark_list.py  registration.py  saved_query_view.py  section.py  semester.py  stream.py  stud_semester_record.py  stud_year_record.py  student.py  student_academic_term_link.py  student_grade_link.py  student_section_link.py  student_semester_record.py  student_stream_link.py  student_subject_link.py  student_term_record.py  student_year_link.py  student_year_record.py  subject.py  subject_grade_link.py  subject_grade_stream_link.py  subject_stream_link.py  subject_yearly_average.py  table.py  (+16 more)
app/backend/models/base/: base_model.py  column_type.py
app/backend/models/engine/: db_storage.py
app/backend/schema/: schema.py
app/backend/schema/models/: __init__.py  academic_term_schema.py  admin_schema.py  assessment_schema.py  blacklist_token_schema.py  event_schema.py  grade_schema.py  grade_stream_link_schema.py  grade_stream_subject_schema.py  mark_list_schema.py  registration_schema.py  saved_query_view_schema.py  section_schema.py  stream_schema.py  student_schema.py  student_term_record_schema.py  student_year_record_schema.py  subject_schema.py  subject_yearly_average_schema.py  table_schema.py  teacher_grade_link_schema.py  teacher_record_schema.py  teacher_schema.py  teacher_subject_link_schema.py  teacher_term_record_schema.py  user_schema.py  year_schema.py  yearly_subject_schema.py
app/backend/schema/response/: schema.py
app/backend/src/project/: main.py
app/backend/src/project/core/: access_control.py  config.py  db.py  security.py  tenant.py
app/backend/src/project/models/: __init__.py  academic_term.py  admin.py  assessment.py  audit_log.py  auth_identity.py  auth_session.py  blacklist_token.py  employee.py  employee_year_link.py  event.py  grade.py  grade_section_link.py  grade_stream_link.py  grade_stream_subject.py  mark_list.py  membership_role.py  parent.py  parent_student_link.py  permission.py  registration.py  role.py  role_permission.py  saved_query_view.py  school.py  school_membership.py  section.py  stream.py  student.py  student_academic_term_link.py  student_grade_link.py  student_section_link.py  student_stream_link.py  student_subject_link.py  student_term_record.py  student_year_link.py  student_year_record.py  subject.py  subject_yearly_average.py  table.py  (+6 more)
app/backend/src/project/schema/: schema.py
app/backend/src/project/templates/: __init__.py  default_academic_year.json
app/backend/src/project/utils/: enum.py  type.py  utils.py
app/backend/tests/: __init__.py  test_file.json  typing.py
app/backend/tests/api/: conftest.py
app/backend/tests/api/routers/: test_grades.py  test_health.py  test_login.py  test_private.py  test_registration.py  test_sections.py  test_streams.py  (+2 more)
app/backend/tests/factories/: api_data.py  base_factory.py  typed_factory.py
app/backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
app/backend/tests/test_api/: _helpers.py  conftest.py  dynamic_schema.py  factories.py  factories_methods.py  helper_functions.py  test_admins.py  test_db.py  test_events.py  test_student_advance_sort.py  test_student_query.py  test_student_sort.py  test_students.py  test_teachers.py
app/backend/tests/utils/: utils.py
app/backend/utils/: enum.py  type.py  utils.py
(+925 files in other folders)
