[project]
name = "classEase-Pitch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pyethiodate>=1.0.6",
    "sqlalchemy>=2.0.40",
    "python-multipart>=0.0.20",
    "python-jose>=3.5.0",
    "dnspython>=2.7.0",
    "email-validator",
    "emails>=0.6",
    "jsonpatch>=1.33",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pydantic-extra-types>=2.10.5",
    "phonenumbers>=9.0.13",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.10.1",
    "Jinja2>=3.1.6",
    "gunicorn>=25.0.1",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.14",
    "factory-boy>=3.3.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "types-factory-boy>=0.4.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = ["."]
exclude = ["tests/factories/.*"]
strict = true                    # Enables all strictness flags below
disallow_untyped_defs = true     # Functions must have type annotations
disallow_incomplete_defs = true  # No partial annotations (e.g., `def foo(x) -> int`)
disallow_any_generics = true       # No `Any` in generic types
warn_return_any = true           # Warn if a function returns `Any`
warn_unused_configs = true       # Warn about unused mypy configs

plugins = "sqlalchemy.ext.mypy.plugin"
disable_error_code = ["misc"]     # Disable specific error codes (e.g., `misc` for non-critical issues)

# Imports and modules
ignore_missing_imports = false    # Fail if imports are missing
follow_imports = "silent"        # Follow imports but don't spam output
namespace_packages = true        # Support modern Python namespace packages

# Performance optimizations (critical for large projects)
cache_dir = ".mypy_cache"        # Speeds up incremental checks
show_error_codes = true          # Show error codes (e.g., `[no-untyped-def]`)
warn_redundant_casts = true      # Warn if casting is unnecessary
warn_unused_ignores = true       # Warn if `# type: ignore` is unused

# Platform-specific settings (if needed)
python_version = "3.10"          # Set your target Python version
platform = "linux"              # Optional: enforce OS-specific checks

# Per-module overrides (example: relax rules for tests/legacy code)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "legacy.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]       # Replaces pytestArgs
pythonpath = ["."]       # Ensures correct import resolution
addopts = "-rav -s"           # Optional: Add verbose flag

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
lint.select = ["E", "F", "I"] # E: pycodestyle errors, F: Pyflakes errors, I: isort
lint.fixable = ["ALL"] # Only auto-fix import errors

[tool.ruff.format]
docstring-code-format = true
