[project]
name = "classEase-Pitch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pyethiodate>=1.0.6",
    "sqlalchemy>=2.0.40",
    "python-multipart>=0.0.20",
    "python-jose>=3.5.0",
    "dnspython>=2.7.0",
    "email-validator",
    "emails>=0.6",
    "jsonpatch>=1.33",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pydantic-extra-types>=2.10.5",
    "phonenumbers>=9.0.13",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.10.1",
    "Jinja2>=3.1.6",
    "gunicorn>=25.0.1",
    "alembic>=1.18.3",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.14",
    "factory-boy>=3.3.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "types-factory-boy>=0.4.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = ["."]
exclude = ["tests/factories/.*"]
strict = true                    # Enables all strictness flags below
disallow_untyped_defs = true     # Functions must have type annotations
disallow_incomplete_defs = true  # No partial annotations (e.g., `def foo(x) -> int`)
disallow_any_generics = true       # No `Any` in generic types
warn_return_any = true           # Warn if a function returns `Any`
warn_unused_configs = true       # Warn about unused mypy configs

plugins = "sqlalchemy.ext.mypy.plugin"
disable_error_code = ["misc"]     # Disable specific error codes (e.g., `misc` for non-critical issues)

# Imports and modules
ignore_missing_imports = false    # Fail if imports are missing
follow_imports = "silent"        # Follow imports but don't spam output
namespace_packages = true        # Support modern Python namespace packages

# Performance optimizations (critical for large projects)
cache_dir = ".mypy_cache"        # Speeds up incremental checks
show_error_codes = true          # Show error codes (e.g., `[no-untyped-def]`)
warn_redundant_casts = true      # Warn if casting is unnecessary
warn_unused_ignores = true       # Warn if `# type: ignore` is unused

# Platform-specific settings (if needed)
python_version = "3.10"          # Set your target Python version
platform = "linux"              # Optional: enforce OS-specific checks

# Per-module overrides (example: relax rules for tests/legacy code)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "legacy.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]       # Replaces pytestArgs
pythonpath = ["."]       # Ensures correct import resolution
addopts = "-rav -s"           # Optional: Add verbose flag

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
lint.select = ["E", "F", "I"] # E: pycodestyle errors, F: Pyflakes errors, I: isort
lint.fixable = ["ALL"] # Only auto-fix import errors

[tool.ruff.format]
docstring-code-format = true


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "./src/"
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
[[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
